# jw-field-companion

./: README.md  SPEC.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: AppShell.tsx
src/hooks/: useDatabaseBootstrap.ts  useOnboardingFlow.ts  useProfilesState.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json
src/lib/: database.ts  onboarding.ts  profiles.ts  theme.ts
src/pages/: HomePage.tsx  OnboardingPlaceholderPage.tsx  ProfileSelectionPage.tsx
src/types/: database.ts  profile.ts  settings.ts
